@@ -668,21 +668,21 @@ rwfail:
 	return (pid_t)-1;
 }
 
-/*
- * Suspend execution of the job step.  Only root or SlurmUser is
- * authorized to use this call.
- *
- * Returns SLURM_SUCCESS is successful.  On error returns SLURM_ERROR
- * and sets errno.
- */
 int
-stepd_suspend(int fd)
+_step_suspend_write(int fd)
 {
 	int req = REQUEST_STEP_SUSPEND;
-	int rc;
-	int errnum = 0;
 
 	safe_write(fd, &req, sizeof(int));
+	return 0;
+rwfail:
+	return -1;
+}
+
+int
+_step_suspend_read(int fd)
+{
+	int rc, errnum = 0;
 
 	/* Receive the return code and errno */
 	safe_read(fd, &rc, sizeof(int));
@@ -692,6 +692,43 @@ stepd_suspend(int fd)
 	return rc;
 rwfail:
 	return -1;
+}
+
+
+/*
+ * Suspend execution of the job step.  Only root or SlurmUser is
+ * authorized to use this call. Since this activity includes a 'sleep 1'
+ * in the slurmstepd, initiate the the "suspend" in parallel
+ *
+ * Returns SLURM_SUCCESS is successful.  On error returns SLURM_ERROR
+ * and sets errno.
+ */
+int
+stepd_suspend(int *fd, int size, uint32_t jobid)
+{
+	int i;
+	int rc = 0;
+
+	for (i = 0; i < size; i++) {
+		debug2("Suspending job %u cached step count %d", jobid, i);
+		if (_step_suspend_write(fd[i]) < 0) {
+			debug("  suspend send failed: job %u (%d): %m",
+				jobid, i);
+			close(fd[i]);
+			fd[i] = -1;
+			rc = -1;
+		}
+	}
+	for (i = 0; i < size; i++) {
+		if (fd[i] == -1)
+			continue;
+		if (_step_suspend_read(fd[i]) < 0) {
+			debug("  resume failed for cached step count %d: %m",
+				i);
+			rc = -1;
+		}
+	}
+	return rc;
 }
 
 /*
